# indyresolve

./: CMakeLists.txt  README.md  demo.c  indyresolve.c  indyresolve.py
