if(NOT DEFINED ENV{DYNAMORIO_HOME})
	message(FATAL_ERROR "You need to set DYNAMORIO_HOME env var.")
endif()
set(DynamoRIO_DIR "$ENV{DYNAMORIO_HOME}/cmake")
cmake_minimum_required(VERSION 3.10)
project(indyresolve)
cmake_minimum_required(VERSION 3.7)
add_library(indyresolve SHARED indyresolve.c)
find_package(DynamoRIO)
if (NOT DynamoRIO_FOUND)
  message(FATAL_ERROR "DynamoRIO package required to build")
endif(NOT DynamoRIO_FOUND)
configure_DynamoRIO_client(indyresolve)
use_DynamoRIO_extension(indyresolve drutil)
